--- a/chi2012.tex
+++ b/chi2012.tex
@@ -145,7 +145,8 @@ The problem stems from [the fact that] we are trying to integrate data systems t
 
 A result of this problem is that users can experience data fragmentation~\cite{Jones05towardsa} across multiple web-based applications and services, and struggle to consolidate across them~\cite{bergman,boardmansasse}.  In our own previously-conducted field study, (reference anonymised) we observed variations of manual ``coping strategies'' (or, if programmers, elaborate, custom-coded one-off solutions) to allow people to manage both online and offline data.  Similar findings from other studies observed volunteers' ``homebrew databases'': manually-maintained information collated to handle the heterogeneous data requirements of groups needing to coordinate their activities~\cite{Voida:2011:HDC:1978942.1979078}.\looseness=-1
 
-A number of research PIM systems have demonstrated numerous ways that users can benefit from better data integration support.  For example, SEMEX's \cite{semex} rich uniform query interface allowed users to quickly trace references of people, places and things across files, folders and repositories.  Similarly, Haystack, a personal information platform, allowed users to visualise and customise how they worked with their data in a uniform, consolidated manner \cite{haystack}. Pertaining to each system's ability to integrate information from arbitrary new data sources, however, both systems generally required new sources to either already conform to a pre-specified set of ontologies, or have the user provide a manual specify such a mapping translation themselves.
+A number of research PIM systems have demonstrated how users benefit from unified, integrated data models.  SEMEX's \cite{semex} uniform query interface allowed users to quickly trace references of people, places and things across files, folders and repositories.  Similarly, Haystack, allowed users to visualise and customise how they worked with their data in a uniform, consolidated manner \cite{haystack}. 
+% Pertaining to each system's ability to integrate information from arbitrary new data sources, however, both systems generally required new sources to either already conform to pre-specified ontologies, or have the user specify such a mapping manually.
 
 % i think we do not need to differentiate between semantic web and database integration here, we're saying they're both bad, let's lump them together to keep the argument flowing and not kill our readers
 The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373} research communities have primarily focused efforts on purely-automatic approaches to the problem of data integration.  Such approaches typically take the form of either \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{direct/instance-level} matching~\cite{suchanek2011paris,castano2006matching}.  We focus on \emph{instance-level} matching, as schemas may not always be available, nor easily accessible to users. 
@@ -176,7 +177,7 @@ The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.115537
 % For our purposes of allowing users to explore and compare data from different websites, we are particularly interested in aligning instances of the most common forms of data that people compare from website to website.  Instance matching within this scope is in its infancy, some of its problems have been addressed by the record linkage problem in the database field \cite{fellegi1969theory,winkler1999state,gu2003record}.  However, there are new problems to address in this field, which are strongly related to schema matching, including structural heterogeneity and logical heterogeneity.
 % The approaches used to match instances typically use: natural language processing, using lexicons like Wordnet to identify synonyms, and word stems \cite{euzenat2004api}; machine learning techniques \cite{doan2003learning}; probabilistic approaches \cite{suchanek2011paris} and comparisons of instance schemas structural and logical definitions \cite{castano2006matching}.  In our case, this is problematic because information from the web does not always have a schema.  In real-world scenarios, semi-automatic ontology matching approaches are favoured over automatic because reconciling the differences between ontologies that were designed for different purposes is not always accurate.  Semi-automatic approaches use varying levels of support to aid a user, from prompting users to manually check flagged alignments, to suggesting possible alignments.  Allowing users to compare instances across heterogeneous data is powerful because users can combine and evaluate multiple sources.  In principle, automatic instance matching approaches would allow users to seamlessly browse this data, however for now and the foreseeable future such approaches cannot make use of personal knowledge and do not guarantee their alignments.  Therefore, in our work, we adopt a semi-automated matching approach, which will support the user to make alignments between web data and their personal data.
 
-\section{Pre-studies: The Need for and Challenges in realising Ad-Hoc Data Integration in PIM Tools}
+\section{Pre-studies: Identifying Needs and Challenges}
 
 %% not sure where this goes >> but i want to keep it
 
@@ -280,7 +281,7 @@ The second finding is that equivalent properties were only rarely given the same
 
 Although not included in the table above, we also examined the source schemas of many of the data sources for property enumerated type values.  There was substantial terminological inconsistency among such values, but also cases where some sources had values not represented in the other source's sets.  For example, the property ``gender''  on Facebook allowed only supported ``male'' and ``female'' for values, while Google+ included a third option,``other''.  ``Relationship status'' was another which was similarly complex, as none of the string representations of enumerated value sets matched across data sources perfectly.
 
-In summary, while data records ranged in complexity, no data source subsumed the rest; all contained properties that other sources did not have.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, although simpler kinds of structural heterogeneity (pertaining to representing substructures of values) were also common.
+In summary, while data records ranged in complexity, no source subsumed the rest; all contained unique properties other sources did not have.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, which occurred vastly more than structural or modeling issues.
 
 %\section{Designing the DataPalette Interface}
 \section{DataPalette : An Interface for Data Mixing}
