--- a/chi2012.tex
+++ b/chi2012.tex
@@ -423,14 +423,14 @@ Restaurant they would book for 12 friends in 3)~Cambridge, and 4)~Glasgow & www.
 
 
 \subsection{Data Collection and Analysis}
-Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study's protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  Both the facilitator and observer were trained on the purpose of the study, their role and how they could and couldn't influence the study.   Explicitly both the facilitator and observer where trained in identifying processes that people used during a task, so that they could thematically categorise them.  Initially, we identified the following themes: organisation of data, eliminating candidates, co-referencing, and visualisations. The studies were run over 4 days.  At the end of each day the facilitators and observers met to discuss the studies' data and to revisit protocols, if necessary.  During the lab study, we recorded the audio and the participant's actions on screen. We asked the participants to follow a \emph{think-aloud} protocol as they worked, so that we could understand the reasoning behind their actions.  At the end of the study, the participant completed an exit survey.
+Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study's protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  Both the facilitator and observer were trained on the purpose of the study, their role and how they could and couldn't influence the study.   Explicitly both the facilitator and observer where trained in identifying processes that people used during a task, so that they could thematically categorise them.  Initially, we identified the following themes: organisation of data, eliminating candidates, co-referencing, and visualisations. The studies were run over 4 days.  At the end of each day the facilitators and observers met to discuss the studies' data and to revisit protocols, if necessary.  During the lab study, we recorded the audio and the participant's actions on screen. We asked the participants to follow a \emph{think-aloud} protocol as they worked, so that we could understand the reasoning behind their actions.  At the end of the study, the participant completed a short exit survey.
 
-We planned to analyse the qualitative and quantitative data using thematic and statistic analysis, respectively.  In order to carry out our data analysis, we used the recorded transcripts to populate a spreadsheet summarising the quantitative metrics (see Table \ref{tbl:data} for specific fields).  In our study, we aimed to identify process and strategies people used to complete their tasks, so that we could evaluate the effectiveness of DP's interface when aligning heterogeneous data for organisational tasks.  We also categorised people's views voiced during the study and in their exit survey pertaining to DP's usability and interface, and clustered them to evaluate common feedback.
+After the studies were complete, we generated transcripts of comments made by participants during the think-aloud protocols. At the same time, we populated a spreadsheet summarising quantitative metrics pertaining to how much various features of the tool were used (see Table \ref{tbl:data} for specific fields).  After the transcriptions were complete, we categorised people's comments made during the study, suggests in their exit survey, and clustered them to common themes.
+
+%% We planned to analyse the qualitative and quantitative data using thematic and statistic analysis, respectively.  In order to carry out our data analysis, we used the recorded transcripts to populate a spreadsheet summarising the quantitative metrics (see Table \ref{tbl:data} for specific fields).  In our study, we aimed to identify process and strategies people used to complete their tasks, so that we could evaluate the effectiveness of DP's interface when aligning heterogeneous data for organisational tasks.  We also categorised people's views voiced during the study and in their exit survey pertaining to DP's usability and interface, and clustered them to evaluate common feedback.
 
 \subsection{Participant Recruitment}
-We recruited participants through adverts posted near the University campus and e-mails to student mailing lists.  We screened participants to be at least 18 years of age, but did not filter or preferentially select participants based on any other criteria.  We took the first 20 that signed up and that successfully specified time slots that were available.   As described below in results, we ended up getting a large number of international students, who had varying proficiency in English.  Since all such participants had passed the requisite proficiency tests to enrol at University, we did not think this would substantially impact results.  Participants were offered a small gift certificate from an online retailer for their time. 
-
-
+We recruited participants through adverts posted near the University campus and e-mails to student mailing lists.  We screened participants to be at least 18 years of age, but did not filter on any other criteria.  We took the first 20 that signed up and that successfully specified time slots that were available.   Participants were offered a small gift certificate from an online retailer for their time. 
 
 
 %\subsection{Data Analysis} 
@@ -442,7 +442,7 @@ We recruited participants through adverts posted near the University campus and 
 
 \section{Results}
 
-We received 26 responses to our call for participants, from which we selected the first 20 (ten of which were female). Seven were non-students, comprised of university staff and alumni; the remainder were students, 8 studying computer science, and 5 studying other subjects.  On average, each study took 40 minutes to complete.  The information in Table \ref{tbl:data} summarises the captured metrics for each participant.
+We received 26 responses to our call for participants, from which we selected the first 20 (ten of which were female). Seven were non-students, comprised of university staff and alumni; the remainder were students, 8 studying computer science, and 5 studying other subjects.  Due to the large population of international students and staff at the University, we ended up getting a large number of non-native English speakers.  However, since all students and staff had passed requisite proficiency tests, we did not think this would substantially impact results.  On average, each study took 40 minutes to complete.  The information in Table \ref{tbl:data} summarises the captured metrics for each participant.
 
 \begin{table*}[htbp]
 \small
